tests/fixtures/invalid/bool_div_str.py
# Cannot divide Bool and Str
x: float = True / "hello"
